--- a/views/index.html
+++ b/views/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@600&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/c7973d10fd.js"></script>
-    <link rel="stylesheet" href="./css/codemirror.css">
-    <link rel="stylesheet" href="./css/dracula.css">
-    <link rel="stylesheet" href="./css/simplescrollbars.css">
+    <link rel="stylesheet" href="/css/codemirror.css">
+    <link rel="stylesheet" href="/css/dracula.css">
+    <link rel="stylesheet" href="/css/simplescrollbars.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>BLAIR - The Magic of Code</title>
   </head>
@@ -20,7 +20,7 @@
     <header>
       <div class="container">
         <div id="logo-box">
-          <img src="./images/logo.png" width="80px">
+          <img src="/images/logo.png" width="80px">
           <div id="logo-text">B L A I R</div>
         </div>
         <div class="flex-buttons">
@@ -43,7 +43,7 @@
               <button class="bt-run">Compilar</button>
             </div>            
           </div>
-          <div class="content-text">
+          <div id="ctx-text" class="content-text">
             <textarea></textarea>
           </div>
         </div>
@@ -52,25 +52,40 @@
             <div class="out-text">Output</div>
             <button class="bt-run bt-clear">Clear</button>
           </div>
-          <div class="content-text">
+          <div class="content-text output-content">
             <textarea></textarea>
           </div>
         </div>
       </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./js/codemirror.js"></script>
-    <script src="./js/simplescrollbars.js"></script>
-    <script src="./js/clike.js"></script>
+    <script src="/js/codemirror.js"></script>
+    <script src="/js/simplescrollbars.js"></script>
+    <script src="/js/clike.js"></script>
+    <script src="/js/closebrackets.js"></script>
+    <script src="/js/show-hint.js" ></script>
     <script >
       const txt = document.querySelectorAll('textarea');
       var flag = false;
-      var editor = CodeMirror.fromTextArea(txt[0], {
+      const editor = CodeMirror.fromTextArea(txt[0], {
         lineNumbers: true,
         scrollbarStyle: 'simple',
         mode: "text/x-csharp",
-        theme: 'default'
+        theme: 'default',
+        styleActiveLine: true,
+        tabSize: 2,
+        showHint: {
+          hint: function() {
+            return {
+              from: editor.getDoc().getCursor(),
+              to: editor.getDoc().getCursor(),
+              list: ['foo', 'bar']
+            }
+          }
+        },
+        extraKeys: {"Ctrl-Space": "autocomplete"}
       });
+      editor.setOption('autoCloseBrackets', true);
       editor.setOption('value', "init: {\n"
             + "\tinteger: a, b, i;\n"
             + "\tdecimal: x;\n"
@@ -106,6 +121,7 @@
         if (!flag) {
           console.log('dracula');
           editor.setOption('theme', 'dracula');
+          $('#ctx-text').addClass('ctx-black');
           $('#bt-dark').removeClass('bt-dark-unselected');
           $('#bt-dark').addClass('bt-dark-selected');
           flag = true;
@@ -113,6 +129,7 @@
         else {
           console.log('default');
           editor.setOption('theme', 'default');
+          $('#ctx-text').removeClass('ctx-black');
           $('#bt-dark').removeClass('bt-dark-selected');
           $('#bt-dark').addClass('bt-dark-unselected');
           flag = false;
