--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,10 +31,13 @@ header {
     top: 0;
     width: auto;
     background-color: #3c096c;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
 }
 
 .flex-buttons {
     display: flex;
+    margin-left: 50%;
 }
 
 .bt-default {
@@ -74,7 +77,7 @@ main {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    align-items: baseline;
+    align-items: center;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -82,6 +85,7 @@ main {
     font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: space-between;
+    width: 100%;
     align-items: center;
     border-bottom: 1px solid #d3dce6;
 }
@@ -159,6 +163,7 @@ main {
     border-right: 1px solid #d3dce6;
     border-bottom: 1px solid #f5f5f5;
     padding: 0.6em 1.3em;
+    font-size: 16px;
 }
 
 .add-file {
