--- a/views/index.html
+++ b/views/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@600&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/c7973d10fd.js"></script>
     <link rel="stylesheet" href="/css/codemirror.css">
     <link rel="stylesheet" href="/css/dracula.css">
@@ -25,8 +25,8 @@
         </div>
         <div class="flex-buttons">
           <button class="btn bt-default"><i class="fas fa-folder-open"></i></button>
-          <button class="btn bt-default"><i class="fas fa-save"></i></i></button>
-          <a href="http://github.com/Krauzy" target="_blank"><button class="btn bt-default"><i class="fab fa-github"></i></button></a>
+          <button class="btn bt-default" style="padding-left: 0.5em;padding-right: 0.5em;"><i class="fas fa-save"></i></button>
+          <a href="http://github.com/Krauzy" target="_blank"><button class="btn bt-default" style="padding-left: 0.4em;padding-right: 0.4em;"><i class="fab fa-github"></i></button></a>
         </div>
       </div>
     </header>
@@ -36,11 +36,14 @@
           <div class="head-edit">
             <div class="div-file">
               <div class="file-tab">main.bla</div>
-              <button class="add-file"><i class="add-plus fas fa-plus"></i></button>
+              <!--<button type="button" class="add-file" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i class="add-plus fas fa-ellipsis-h"></i></button>-->
             </div>
-            <div>
+            <div style="display: flex;">
               <button id="bt-dark" class="bt-dark-unselected"><i class="fas fa-moon"></i></button>
-              <button class="bt-run">Compilar</button>
+              <form method="POST" action="/compiler">
+                <button class="bt-run" id="run">Compilar</button>
+                <input id="hidden" name="edit" type="hidden" value="dafsdfas">
+              </form>              
             </div>            
           </div>
           <div id="ctx-text" class="content-text">
@@ -58,7 +61,9 @@
         </div>
       </div>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="/js/codemirror.js"></script>
     <script src="/js/simplescrollbars.js"></script>
     <script src="/js/clike.js"></script>
@@ -121,6 +126,9 @@
           $('#bt-dark').addClass('bt-dark-unselected');
           flag = false;
         }
+      });
+      $('#run').click((e) => {
+        $('#hidden').val(editor.getOption('value'));
       });
     </script>
   </body>
